# StrategicSurveyEngine

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
.kiro/base/: db_design.md  development_roadmap.md  (+3 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_survey_lifecycle.py
backend/alembic/: MIGRATION_TROUBLESHOOTING.md  env.py
backend/alembic/versions/: 001_public_surveys.py  002_add_access_code_hash.py  002_add_is_disclosure_agreed_to_published_opinions.py  003_add_survey_notes.py  004_published_opinion_score_components.py  005_published_opinion_updated_at.py  006_published_opinions_gin_fts.py  007_add_admin_notes_to_published_opinions.py  008_add_access_code_plain.py  009_drop_access_code_hash.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middleware/: schema_middleware.py
backend/app/models/: __init__.py  base.py  public.py  tenant.py
backend/app/routers/: admin.py  manager.py  manager_export.py  survey.py
backend/app/schemas/: moderation.py  public_opinion.py  question.py  submission.py  survey.py
backend/app/services/: survey_lifecycle.py  survey_provisioning.py
backend/tests/: README.md  conftest.py  test_edge_cases.py  test_export.py  test_happy_path.py  test_survey_lifecycle.py
docs/: db_design.md  development_roadmap.md  tech_stack.md  ui_design.md  user_flow.md
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  jest.config.cjs  package-lock.json  package.json  vite.config.ts
(+29 files in other folders)
